[package]
name = "dex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
capnp = "0.16.0"
clap = { version = "4.1.8", features = ["derive"] }
ring = { version = "0.16.20", features = ["std"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }

[build-dependencies]
capnpc = "0.16.3"
