[package]
name = "dex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
capnp = "0.16.0"
capnp-rpc = "0.16.1"
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.27"
hex = "0.4.3"
ring = { version = "0.16.20", features = ["std"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tar = "0.4.38"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["net", "rt", "macros", "io-util"] }
tokio-rusqlite = "0.3.0"
tokio-util = { version = "0.7.7", features = ["compat"] }

[build-dependencies]
capnpc = "0.16.3"
